# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xD14JxSNFh6KJ_03kQazCMvgTXuR3FeK5TQVDPVTwW4s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1acLDb461LY6_JktqhwOiCvzSeQtv_KnaQoSzIujYiM4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1S_D5MHnfS11tp90LG0YZC_yVgBh6JFK3jJIQgTmAzLY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xNVoJBFNpPe57lcKK7Qle3aocSLl1VgKfgKCeUQ_CIBo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x1K4Vo9PszoPbpI2NQ5TllOxl_Jkjzn6tyAABnE2exCPk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1EP_WzfHEaaCM2HEysLkQysEsb6-jbZCCimrwlpxYvDI=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT14I_lZZx5EeffrChVvrOkdGwZg2TLwGmoh36U74rvAJw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT25uPzG9_DOCeF21UJoL7q0AEu0GQxCS9wk_e48iWvj6o=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT28QVDuFS3fX0-Y9XCt7DhZ8VK1Cz-ioPkyJ9n28FI2mU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2DqiT5BEg3ZuLo9Jo_T0lLmEru6JZ-G5MS2N2uKzfjfg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2IUkWYgj9kdS98Py8Ugv3-C-5bNzDcrs84y_h6N5kAug=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2KccdB0aq74xQDxbfyLqugTSg8RJ7vwd659jlgV5CiEs=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1G7N24Flaf0-s3-qNwI3Jkddwym1VE_WZ5AUzeiJyZM8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1LvUQ6NR0ghG2ZCklHfw5K2ts5YfEPII-ZuRBNrXdTnU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1_MO2rANfQmQQbVKuwZYGyoyJ4psLRHQhT9gi80mPxJE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1gvK-DFC6x_7F3ulKMzOp6QowzopxlPPlYApBfJDs46w=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1h5syDpK5lgK5SvIhFj-7nUwIPvdei4ZZkfnDSC-wZyc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1tT4JCHXq23zu5vXspk3RUrn4-sVzxziBRuz0J__D0qI=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x1evFftbGL_dddCTwQLL-Nkg0COuyfV7ZO-26Y19VcJwU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64HR1aCtOlQeY7krtYn2H9KrGaq7xiiFbT9_5g2DGSqFs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64XCZN_4JmZQyljoIme8Hy9oEFzLIpG-Pmmoq-0DBL85k=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x14zCm7kzz5KBTmkEDplS4eK7uZPnByYNJNpzZpyYj-8U=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1CY3LFCkJt5p9QHGPAc2aH4Hl0SezhSNZMI1-rQRij5w=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x1GBSgDW3n0JYFVTUTpQNTCnsmUnIUv6MNJUnHYlt76YM=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_2tYb4S02oLnCn9SF3RMKl51s1ab5IVzHddAekNwvQss=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_4E-9uRyX_oOizM-criO_C5GfQDafKesbcsC8u0m8iMs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_knYhVnW7ErGCrt81ymuEFiToKIvRRVPBvELDodbYRi8=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI324ZIbGJ9B_yQLEIkfwBM-XhyMEAdaD4ofKeVGBwvkL1o=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32H4DL--Nf5-t7TQWfggwLTg3U841eLIgFJB43G4ogHvk=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32wviYN1vCKpZ2s_xO1-DiCcyek2x3taVJSMS0pW9Hel4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI32wwxJEXqpfYTw7IqGtQOyzjY0pWxJQAFVS0y0joRK8Io=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xWZNAFCx20bkUZ3qBbtr9grg88osqVpD4RPhc_XVJsmo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xpeuiU2vgw_2hG9ml6lormosHI21oKCYxJcDXWJO0e_g=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT133126Loe8nTyl30AN6vCitnvbGa0NKAJonN13y4bbA8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT14nB3zesp9_f2bpxwSMgbAWUaWGkNQQl0xCLKadhQYFA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT15_UBzCXVLjqk38X2ZRQo899lBGfUSbHcTAU9V-qtakM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT16Zw1AKiRHopuu1Und7HKST-FiQzABkEuZeoR7x6UaHM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1JFyEdgZwSl9MLZSwnc5XK_31pBiID5DoxUHf9cNr54c=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1JLO1AwGFh8kioybwhzxQK42ECWufQ9AGmu0ne3mCKjQ=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1-9PMR_m5LUA6VuAGDioqi2ius0wdFZw3i4DnNFwTvS8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1H4QsWGImj2c0J2F3TELN1GBfR58x7QociQxQjrcQE60=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3UXngHcgECjJ4QGo0uEJha2zumU82uNwsM-Pt9mG5zyY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3lKCTwr79J3TdHsZc0U1FK-RZHIH6-iOKqW9B9_q6AVY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4GSYca8ePDzcHukDPX03yo_QI1AfDDNExApcApjYokbA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4lyMxbgVJg8OCK-lZ6UotW5pcU937sWHe7t7XUF0cBjE=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16HUPeIHBYh4lWsY_GWRqgctgt1LaXmj4m3joNvLSNcZI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16QZtvQLoV0rEiIimHgdEufMC1BXPpEkWGwbFMO2EDxKg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16NQc6Q-vn2uJpwLvw7umyZrWJWV_Vnb5yeHtQkhGZEXM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16nQqOBRiFhpnXNGRFos341DHDTgmFX1iknbNloBXx-CI=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16kA9puSSHe-9J5VbVy016oDSJuUKEzIJrG6XwGI8o-As=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16evQxVoSJsLtxFK6LztyQQZExiMo3lWnkx8YpBSDtsYE=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16LfA_cnZwkyqo3B1q3swhPFGs8rasLa_2JCR8UZgMWfc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16ZSuro3a1hwa9CWxvQ9o-6xNDMeNRgQGC6dX--YP0AHM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16MjP29EjRqMuaKgptaZXxcj1RwGbal5Zrlkn3qwQ6I8I=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16-0n_Ira18d7cUzOsmmXc41m_ZX0Bxii2Vl3tjkiud5s=',
      'err': 0,
    }),
  ])
# ---
